--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "smallpt-explicit"
+name = "rust-smallpt"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+getopts = "0.2.21"
 image = "0.25.5"
-lazy_static = "1.5.0"
+num-complex = "0.4.6"
 rand = "*"
 rayon = "*"
